// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyWithMeta when route is a redirect route 1`] = `
<Component
  className="body"
>
  <body
    className="body"
    lang="en"
  >
    <div>
      static page
    </div>
  </body>
</Component>
`

exports[`BodyWithMeta when route is a static route 1`] = `
<Component
  className="body"
>
  <body
    className="body"
    lang="en"
  >
    <div>
      static page
    </div>
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    window.__routeInfo = {\\"routeDate\\":\\"here\\"};",
        }
      }
      type="text/javascript"
    />
    <script
      defer={true}
      key="main.js"
      src="/assets/path/main.js"
      type="text/javascript"
    />
    <script
      defer={true}
      key="bootstrap.js"
      src="/assets/path/bootstrap.js"
      type="text/javascript"
    />
  </body>
</Component>
`
